[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InDelsTopo"
version = "0.1.0"
description = "A Python package to analyze topological properties of sets of words when their main source of variation are insertions and deletions, using the Insertion Chain Complex framework."
readme = "README.md"
authors = [
    { name = "Francisco Martinez-Figueroa", email = "fmartinezfigueroa@usf.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"

# Add or remove dependencies as needed
dependencies = [
    "numpy >= 1.20, <2.0",
    "networkx >= 3.0",
    "matplotlib >= 3.0",
    "sympy >= 1.9",
    "scipy>=1.12"
    
]

keywords = [
    "word combinatorics", 
    "topology", 
    "homology",
    "chain complexes",
    "topology",
    "mathematics",
    "biomathematics",
    "DNA sequence analysis"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint."MASTER"]
ignore-patterns = ["__init__.py"]
jobs = 1

[tool.black]
line-length = 88
target-version = ['py38']

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pylint",
    "build",
    "twine",
]


[project.urls]
Homepage = "https://github.com/USF-DNA-Knot-Math/InDelsTopo"
Repository = "https://github.com/USF-DNA-Knot-Math/InDelsTopo"
Issues = "https://github.com/USF-DNA-Knot-Math/InDelsTopo/issues"